5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4157/executions/1785_1596.log
== TEST (2019-05-30 10:08:58) 
-- CODE:
from numpy import*
vn = array(eval(float(input("notas do estudante:"))))
m = vn[1:3]
me = (sum(m)/size(m))
print(round(m, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:09:56) 
-- CODE:
from numpy import*
vn = array(eval(input("notas do estudante:")))
m = vn[1:3]
me = (sum(m)/size(m))
print(round(m, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:14:17) 
-- CODE:
from numpy import*
v= array(eval(input("notas do estudante:")))
m = v[1:3]
me = (sum(m)/size(m))
print(round(m, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 10:17:06) 
-- CODE:
from numpy import*
v = array(eval(input("notas do estudante:")))
m = v[1:]
me = (sum(m)/size(m))
print(round(me, 2))

-- EXECUTION TIME:
0.471933
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
1.5
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
2.75
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
2.0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:17:59) 
-- CODE:
from numpy import*
v = array(eval(float(input("notas do estudante:"))))
m = v[1:]
me = (sum(m)/size(m))
print(round(me, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 10:23:06) 
-- CODE:
from numpy import*
v = array(eval(float(input("notas do estudante:"))))
m = v[1:]
me = (sum(m)/size(m))
print(round(me, 2))

-- EXECUTION TIME:
0.388554
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1785/1596/main.py", line 2, in <module>
    v = array(eval(float(input())))
ValueError: could not convert string to float: '[1,0,3]'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:25:28) 
-- CODE:
from numpy import*
v = array(eval(input("notas do estudante:")))

me = (sum(v)-min(v)/size(v))
print(round(me, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 10:25:31) 
-- CODE:
from numpy import*
v = array(eval(input("notas do estudante:")))

me = (sum(v)-min(v)/size(v))
print(round(me, 2))

-- EXECUTION TIME:
0.403168
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
4.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
13.8
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
7.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 10:25:34) 
-- CODE:
from numpy import*
v = array(eval(input("notas do estudante:")))

me = (sum(v)-min(v)/size(v))
print(round(me, 2))

-- EXECUTION TIME:
0.112826
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1785/1596/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 10:25:38) 
-- CODE:
from numpy import*
v = array(eval(input("notas do estudante:")))

me = (sum(v)-min(v)/size(v))
print(round(me, 2))

-- EXECUTION TIME:
0.697915
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
4.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
4.0
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
13.8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 10:25:39) 
-- CODE:
from numpy import*
v = array(eval(input("notas do estudante:")))

me = (sum(v)-min(v)/size(v))
print(round(me, 2))

-- EXECUTION TIME:
1.8267
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
4.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
4.0
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
7.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 10:25:40) 
-- CODE:
from numpy import*
v = array(eval(input("notas do estudante:")))

me = (sum(v)-min(v)/size(v))
print(round(me, 2))

-- EXECUTION TIME:
2.12052
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
4.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
13.8
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
7.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 10:25:40) 
-- CODE:
from numpy import*
v = array(eval(input("notas do estudante:")))

me = (sum(v)-min(v)/size(v))
print(round(me, 2))

-- EXECUTION TIME:
2.30909
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
4.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
13.8
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
7.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 10:25:41) 
-- CODE:
from numpy import*
v = array(eval(input("notas do estudante:")))

me = (sum(v)-min(v)/size(v))
print(round(me, 2))

-- EXECUTION TIME:
3.14129
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
4.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
7.5
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
4.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 10:25:41) 
-- CODE:
from numpy import*
v = array(eval(input("notas do estudante:")))

me = (sum(v)-min(v)/size(v))
print(round(me, 2))

-- EXECUTION TIME:
2.56125
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
7.5
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
13.8
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
7.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 10:25:42) 
-- CODE:
from numpy import*
v = array(eval(input("notas do estudante:")))

me = (sum(v)-min(v)/size(v))
print(round(me, 2))

-- EXECUTION TIME:
1.93788
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
4.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
13.8
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
7.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 10:25:42) 
-- CODE:
from numpy import*
v = array(eval(input("notas do estudante:")))

me = (sum(v)-min(v)/size(v))
print(round(me, 2))

-- EXECUTION TIME:
2.15997
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
4.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
13.8
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
7.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:26:00) 
-- CODE:
from numpy import*
v = array(eval(input("notas do estudante:")))
7

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 10:26:49) 
-- CODE:
from numpy import*
v = array(eval(input("notas do estudante:")))

me = (sum(v)-min(v)/size(v)-1)
print(round(me, 2))

-- EXECUTION TIME:
0.509231
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
3.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
12.8
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
6.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:27:19) 
-- CODE:
from numpy import*
v = array(eval(input("notas do estudante:")))
me = (sum(v)-min(v)/size(v)-1)
print(round(me, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 10:28:38) 
-- CODE:
from numpy import*
v = array(eval(input("notas do estudante:")))
me = ((sum(v)-min(v))/(size(v)-1)
print(round(me, 2))

-- EXECUTION TIME:
0.176625
-- ERROR:
  File "/home/codebench/codes/1785/1596/main.py", line 4
    print(round(me, 2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 10:28:41) 
-- CODE:
from numpy import*
v = array(eval(input("notas do estudante:")))
me = ((sum(v)-min(v))/(size(v)-1)
print(round(me, 2))

-- EXECUTION TIME:
0.155519
-- ERROR:
  File "/home/codebench/codes/1785/1596/main.py", line 4
    print(round(me, 2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 10:28:41) 
-- CODE:
from numpy import*
v = array(eval(input("notas do estudante:")))
me = ((sum(v)-min(v))/(size(v)-1)
print(round(me, 2))

-- EXECUTION TIME:
0.164556
-- ERROR:
  File "/home/codebench/codes/1785/1596/main.py", line 4
    print(round(me, 2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 10:28:41) 
-- CODE:
from numpy import*
v = array(eval(input("notas do estudante:")))
me = ((sum(v)-min(v))/(size(v)-1)
print(round(me, 2))

-- EXECUTION TIME:
0.31319
-- ERROR:
  File "/home/codebench/codes/1785/1596/main.py", line 4
    print(round(me, 2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 10:28:42) 
-- CODE:
from numpy import*
v = array(eval(input("notas do estudante:")))
me = ((sum(v)-min(v))/(size(v)-1)
print(round(me, 2))

-- EXECUTION TIME:
0.222127
-- ERROR:
  File "/home/codebench/codes/1785/1596/main.py", line 4
    print(round(me, 2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 10:28:42) 
-- CODE:
from numpy import*
v = array(eval(input("notas do estudante:")))
me = ((sum(v)-min(v))/(size(v)-1)
print(round(me, 2))

-- EXECUTION TIME:
0.268995
-- ERROR:
  File "/home/codebench/codes/1785/1596/main.py", line 4
    print(round(me, 2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:28:42) 
-- CODE:
from numpy import*
v = array(eval(input("notas do estudante:")))
me = ((sum(v)-min(v))/(size(v)-1)
print(round(me, 2))

-- ERROR:
File "XXXX", line 4
    print(round(me, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:29:38) 
-- CODE:
from numpy import*
v = array(eval(input("notas do estudante:")))
me = ((sum(v)-min(v))/(size(v))

print(round(me, 2))

-- ERROR:
File "XXXX", line 5
    print(round(me, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:29:39) 
-- CODE:
from numpy import*
v = array(eval(input("notas do estudante:")))
me = ((sum(v)-min(v))/(size(v))

print(round(me, 2))

-- ERROR:
File "XXXX", line 5
    print(round(me, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:29:40) 
-- CODE:
from numpy import*
v = array(eval(input("notas do estudante:")))
me = ((sum(v)-min(v))/(size(v))

print(round(me, 2))

-- ERROR:
File "XXXX", line 5
    print(round(me, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:29:41) 
-- CODE:
from numpy import*
v = array(eval(input("notas do estudante:")))
me = ((sum(v)-min(v))/(size(v))

print(round(me, 2))

-- ERROR:
File "XXXX", line 5
    print(round(me, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:29:41) 
-- CODE:
from numpy import*
v = array(eval(input("notas do estudante:")))
me = ((sum(v)-min(v))/(size(v))

print(round(me, 2))

-- ERROR:
File "XXXX", line 5
    print(round(me, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:29:49) 
-- CODE:
from numpy import*
v = array(eval(input("notas do estudante:")))
me = ((sum(v)-min(v))/(size(v))

print(round(me, 2))

-- ERROR:
File "XXXX", line 5
    print(round(me, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:30:25) 
-- CODE:
from numpy import*
v = array(eval(input("notas do estudante:")))
me = (sum(v)-min(v))/size(v)
print(round(me, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:31:51) 
-- CODE:
from numpy import*
v = array(eval(input("notas do estudante:")))
me = (sum(v)-min(v))/(size(v)-1)
print(round(me, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 10:32:36) 
-- CODE:
from numpy import*
v = array(eval(input("notas do estudante:")))
me = (sum(v)-min(v))/(size(v)-1)
print(round(me, 2))

-- EXECUTION TIME:
0.447366
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
2.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
3.25
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
2.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 10:34:30) 
-- CODE:
from numpy import*
vet = array(eval(input("notas do estudante:")))
me = (sum(vet)-min(vet))/(size(vet)-1)
print(round(me, 2))

-- EXECUTION TIME:
0.498955
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
2.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
3.25
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
2.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
